adding some more

--- a/johnspage.html
+++ b/johnspage.html
@@ -7,10 +7,12 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <script src="js/bliss.js"></script> 
     <script src="js/scroll_sections.js"></script>
     <!--script src="js/mousePos.js"></script-->
-<title>Dev Head Island</title>
+    <script src="js/mousePos.js"></script>
+<title>JohnBPage</title>
 
 </head>
 
@@ -18,14 +20,15 @@
     <div class= "containTop">
     <header>
         <div id="title1">
-            <h1>DevHead</h1>
+            <h1>Welcome</h1>
         </div>
-        <div id="title2">
+        <!--<div id="title2">
             <h1>I</h1>
         </div>
         <div id="title3">
             <h1>sland</h1>
-        </div> 
+        </div>
+        --> 
     </header>    
         <div id ="leftFold" class= "left"></div>
         <div id ="rightFold" class= "right"></div>
