--- a/Page2/page2.html
+++ b/Page2/page2.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<h1><a href = "jb7452898-cpu.github.io/JohnBWebsite/johnspage" title = "home" >HOME</a></H1>
+	<h1><a href = "JohnBWebsite/johnspage.html" title = "home" >HOME</a></H1>
 	<h2>page 2 </h2>
 
 	The second page is coming soon...
