fixing home link

--- a/johnspage.html
+++ b/johnspage.html
@@ -66,7 +66,7 @@
     </div><!---end "containTop"-->
     <div class="solidBG_1">
         solid BG_1
-        <h6><a href = "Page2/page2.html" title="page2">PAGE 2</a></h6>
+        <h6><a href = "Page2/page2.html" target="_blank" title="page2">PAGE 2</a></h6>
     </div>
     <div class="solidBG_2">
         solid BG_2
