--- a/Page2/page2.html
+++ b/Page2/page2.html
@@ -12,6 +12,6 @@
 	<h2>page 2 </h2>
 
 	The second page is coming soon...
-	I was having trouble getting it home but i think it works now
+	I was having trouble getting it home but i think it works now...
 </body>
 </html>
