changes to test coming poker game page

--- a/Page2/page2.html
+++ b/Page2/page2.html
@@ -10,8 +10,10 @@
 <body>
 	<h1><a href = "/JohnBWebsite/johnspage.html" title = "home" >HOME</a></H1>
 	<h2>page 2 </h2>
-
-	The second page is coming soon...
-	I was having trouble getting it home but i think it works now...
+<table>
+<tr>
+<td><a href = "/drawpoker/drawpoker.html">Draw Poker</a></td>
+</tr>
+</table>
 </body>
 </html>
