changes to page2

--- a/Page2/page2.html
+++ b/Page2/page2.html
@@ -13,6 +13,8 @@
 <table>
 <tr>
 <td><a href = "/drawpoker/drawpoker.html">Draw Poker</a></td>
+<td><a href = "/blackjack/blackjack.html">Blackjack</td>
+<td><a href = "/texasholdem/texasholdem.html">Texas HoldEm</td>
 </tr>
 </table>
 </body>
