trying out some new changes

--- a/Page2/page2.html
+++ b/Page2/page2.html
@@ -15,6 +15,7 @@
 <td><a href = "/drawpoker/drawpoker.html">Draw Poker</a></td>
 <td><a href = "/blackjack/blackjack.html">Blackjack</td>
 <td><a href = "/texasholdem/texasholdem.html">Texas HoldEm</td>
+<td><a href = "/kingscorners/kinggcorners.html">Kings Corners</td>
 </tr>
 </table>
 </body>
