--- a/Page2/page2.html
+++ b/Page2/page2.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<link href = "css/page2.css" rel="stylesheet" type= "text/css">
 	</head>
-	<title>Page2</title>
+	<title>Game Room</title>
 </head>
 
 <body>
@@ -12,6 +12,7 @@
 	<h2>page 2 </h2>
 <table>
 <tr>
+<td><a href = "/alertpoker/alert_poker.html"></td>
 <td><a href = "/drawpoker/drawpoker.html">Draw Poker</a></td>
 <td><a href = "/blackjack/blackjack.html">Blackjack</td>
 <td><a href = "/texasholdem/texasholdem.html">Texas HoldEm</td>
