--- a/Page2/page2.html
+++ b/Page2/page2.html
@@ -12,7 +12,7 @@
 	<h2>page 2 </h2>
 <table>
 <tr>
-<td><a href = "/alertpoker/alert_poker.html">Alert Poker!</td>
+<td><a href = "/alertpoker/alert_poker.html">Alert Poker!<a></td>
 <td><a href = "/drawpoker/drawpoker.html">Draw Poker</a></td>
 <td><a href = "/blackjack/blackjack.html">Blackjack</td>
 <td><a href = "/texasholdem/texasholdem.html">Texas HoldEm</td>
