--- a/Page2/blackjack/blackjack.html
+++ b/Page2/blackjack/blackjack.html
@@ -2,14 +2,15 @@
 <html lan = "en">
 <head>
 <meta charset = "utf-8">
-<title>draw poker</title>
+<title>blackjack</title>
 
-<link href="alert_poker.css" rel = "stylesheet" type = "text/css">
+<link href="blackjack.css" rel = "stylesheet" type = "text/css">
 </head>
 
 <body>
 
-  <script src = "poker_javascript.js"></script>
+<h1>BLACKJACK</h1>
+  <script src = "blackjack.js"></script>
 
 <table>
 <tr>
