--- a/Page2/page2.html
+++ b/Page2/page2.html
@@ -12,11 +12,11 @@
 	<h2>page 2 </h2>
 <table>
 <tr>
-<td><a href = "/alertpoker/alert_poker.html">Alert Poker!<a></td>
-<td><a href = "/drawpoker/drawpoker.html">Draw Poker</a></td>
-<td><a href = "/blackjack/blackjack.html">Blackjack</td>
-<td><a href = "/texasholdem/texasholdem.html">Texas HoldEm</td>
-<td><a href = "/kingscorners/kinggcorners.html">Kings Corners</td>
+<td><a href = "alertpoker/alert_poker.html">Alert Poker!</a></td>
+<td><a href = "drawpoker/draw_poker.html">Draw Poker</a></td>
+<td><a href = "blackjack/blackjack.html">Blackjack</a></td>
+<td><a href = "texasholdem/texasholdem.html">Texas HoldEm</a></td>
+<td><a href = "kingscorners/kinggcorners.html">Kings Corners</a></td>
 </tr>
 </table>
 </body>
