fixes to the draw poker css  need to be able to return home from draw poker

--- a/Page2/drawpoker/draw_poker.html
+++ b/Page2/drawpoker/draw_poker.html
@@ -34,6 +34,8 @@
  
  <h3 id="credits" class = "creditstyle"  ></h3>
 
+ <h3 class = "returnstyle"><a href = "../page2.html">Return</h3>
+
 
  
   <script src = "draw_poker_v3.js"></script>
