change page2 to to reflect Neon Poker!

--- a/Page2/page2.html
+++ b/Page2/page2.html
@@ -13,6 +13,7 @@
 <table>
 <tr>
 <td><a href = "alertpoker/alert_poker.html">Alert Poker!</a></td>
+<td><a href = "neonpoker/chatDrawPoker.html">NEON POKER</a></td>
 <td><a href = "drawpoker/draw_poker.html">Draw Poker</a></td>
 <td><a href = "blackjack/blackjack.html">Blackjack</a></td>
 <td><a href = "texasholdem/texasholdem.html">Texas HoldEm</a></td>
