--- a/Page2/neonpoker/chatDrawPoker.html
+++ b/Page2/neonpoker/chatDrawPoker.html
@@ -197,28 +197,6 @@
     }
 
 
-    /* Animate frame ONLY when winning */
-      body.win-active .neon-frame{
-        animation: neonFrameSpin 3.5s linear infinite;
-      }
-
-      body.win-small .neon-frame{
-        animation-duration: 4.5s;
-      }
-
-      body.win-big .neon-frame{
-        animation-duration: 3s;
-      }
-
-      body.win-mega .neon-frame{
-        animation-duration: 1.8s;
-        filter:
-          drop-shadow(0 0 16px rgba(0,245,255,.75))
-          drop-shadow(0 0 28px rgba(255,43,214,.55))
-          drop-shadow(0 0 44px rgba(255,255,255,.25));
-      }
-
-
 
     .row{
       display:flex;
@@ -586,129 +564,139 @@
 
     footer{ text-align:center; color: rgba(255,255,255,.55); padding: 18px 10px; font-size:12px; }
 
-    /* ===== Animated Neon Cabinet Frame ===== */
-    .neon-frame{
-      position: fixed;
-      inset: 0;
-      pointer-events: none;
-      z-index: 9999; /* sits above everything */
 
-      /* thickness of the border */
-      padding: 16px;
+  /* ==============================
+   CABINET FRAME (KNOWN GOOD)
+   - idle: subtle dark outline
+   - win: bright neon pulse
+   - Firefox friendly (border-image + box-shadow)
+   ============================== */
 
-      /* we draw the border using background clipped to the padding-box */
-      background:
-        /* animated multi-stop gradient "tube" */
-        conic-gradient(
-          from 0deg,
-          rgba(0,245,255,1),
-          rgba(255,43,214,1),
-          rgba(255,215,0,1),
-          rgba(0,255,160,1),
-          rgba(0,245,255,1)
-        ) border-box;
-
-      /* carve out the center */
-      -webkit-mask:
-        linear-gradient(#000 0 0) content-box,
-        linear-gradient(#000 0 0);
-      -webkit-mask-composite: xor;
-              mask-composite: exclude;
-
-      border-radius: 22px;
-
-      /* glow */
-      filter:
-        drop-shadow(0 0 10px rgba(0,245,255,.55))
-        drop-shadow(0 0 18px rgba(255,43,214,.35))
-        drop-shadow(0 0 28px rgba(0,245,255,.25));
-
-      opacity: .9;
-    }
-
-    /* Inner “glass” rim so it feels like a real cabinet */
-    .neon-frame::before{
-      content:"";
-      position:absolute;
-      inset: 10px;
-      border-radius: 16px;
-      border: 1px solid rgba(255,255,255,.10);
-      box-shadow:
-        inset 0 0 0 1px rgba(0,0,0,.35),
-        inset 0 0 18px rgba(0,245,255,.10),
-        inset 0 0 18px rgba(255,43,214,.08);
-    }
-
-    /* Animation: rotate + hue shift so colors "travel" around the page */
-    @keyframes neonFrameSpin{
-      0%   { transform: rotate(0deg);   filter: hue-rotate(0deg)   drop-shadow(0 0 10px rgba(0,245,255,.55)) drop-shadow(0 0 18px rgba(255,43,214,.35)) drop-shadow(0 0 28px rgba(0,245,255,.25)); }
-      50%  { transform: rotate(180deg); filter: hue-rotate(120deg) drop-shadow(0 0 12px rgba(0,245,255,.55)) drop-shadow(0 0 22px rgba(255,43,214,.35)) drop-shadow(0 0 34px rgba(0,245,255,.25)); }
-      100% { transform: rotate(360deg); filter: hue-rotate(240deg) drop-shadow(0 0 10px rgba(0,245,255,.55)) drop-shadow(0 0 18px rgba(255,43,214,.35)) drop-shadow(0 0 28px rgba(0,245,255,.25)); }
-    }
-
-    /* Only animate in neon theme (optional) */
-    body[data-theme="neon"] .neon-frame{
-      animation: neonFrameSpin 7s linear infinite;
-    }
-
-    /* If you want a calmer look on classic theme */
-    body[data-theme="classic"] .neon-frame{
-      opacity: .35;
-      filter: none;
-    }
-
-    .neon-frame{
-      animation: none !important;
-      transform: none !important;
-    }
-
-    body.win-active .neon-frame{
-      animation: neonFrameSpin 3.5s linear infinite !important;
-    }
-
-        body.win-small .neon-frame{ animation-duration: 4.5s !important; }
-    body.win-big   .neon-frame{ animation-duration: 3s !important; }
-    body.win-mega  .neon-frame{ animation-duration: 1.8s !important; }
-
-
-      /* Stationary frame by default */
-    body:not(.win-active) .neon-frame{
-      animation: none !important;
-      opacity: .9;
-    }
-
-    /* Pulse on ANY win */
-    body.win-active .neon-frame{
-      animation: neonPulse 1.6s ease-in-out infinite !important;
-      opacity: 1;
-    }
-
-    body.win-small .neon-frame{
-      animation-duration: 1.8s !important;
-    }
-
-    body.win-big .neon-frame{
-      animation-duration: 1.2s !important;
-    }
-
-    body.win-mega .neon-frame{
-      animation-duration: .75s !important;
-    }
-
-/* default: no border animation */
 .neon-frame{
-  animation: none !important;
+  position: fixed;
+  inset: 0;
+  pointer-events: none;
+  z-index: 9999;
 }
 
-/* pulse only when winning */
-body.win-active .neon-frame{
-  animation: neonPulse 1.6s ease-in-out infinite !important;
+/* Border ring (idle state) */
+.neon-frame::before{
+  content:"";
+  position:absolute;
+  inset: 0;
+  border-radius: 22px;
+
+  border: 16px solid transparent;
+
+  /* idle: single dark tone */
+  border-image: linear-gradient(
+    180deg,
+    rgba(18,28,38,.95),
+    rgba(8,14,20,.95)
+  ) 1;
+
+  opacity: .22;
+  filter: none;
+  box-shadow: none;
+
+  animation: none;
 }
 
-/* tier speed */
-body.win-small .neon-frame{ animation-duration: 1.8s !important; }
-body.win-big   .neon-frame{ animation-duration: 1.2s !important; }
-body.win-mega  .neon-frame{ animation-duration: .75s !important; }
+/* inner rim */
+.neon-frame::after{
+  content:"";
+  position:absolute;
+  inset: 10px;
+  border-radius: 16px;
+  border: 1px solid rgba(255,255,255,.08);
+  box-shadow: inset 0 0 0 1px rgba(0,0,0,.35);
+  opacity: .35;
+}
+
+/* Win pulse */
+@keyframes neonWinPulse{
+  0%, 100%{
+    filter: brightness(1.15) saturate(1.4);
+    box-shadow:
+      0 0 14px rgba(0,245,255,.55),
+      0 0 30px rgba(255,43,214,.45),
+      0 0 60px rgba(255,255,255,.18);
+  }
+  50%{
+    filter: brightness(2.2) saturate(2.5);
+    box-shadow:
+      0 0 30px rgba(0,245,255,1),
+      0 0 85px rgba(255,43,214,1),
+      0 0 150px rgba(255,255,255,.35);
+  }
+}
+
+@keyframes winHueCycleFast {
+  0%   { filter: hue-rotate(0deg); }
+  100% { filter: hue-rotate(360deg); }
+}
+
+
+/* WIN: bring color + pulse back */
+body.win-active .neon-frame::before{
+  border-image: conic-gradient(
+    from 0deg,
+    #00f5ff,
+    #ff2bd6,
+    #ffd700,
+    #00ffa0,
+    #00f5ff
+  ) 1;
+
+  opacity: 1;
+
+  animation:
+    /* 1️⃣ one-shot flash */
+    winFlash 0.45s ease-out 1,
+
+    /* 2️⃣ brightness pulse (starts AFTER flash) */
+    neonWinPulse .85s ease-in-out infinite .45s,
+
+    /* 3️⃣ fast color cycling (starts AFTER flash) */
+    winHueCycleFast 1.1s linear infinite .45s;
+}
+
+
+/* Tier speeds */
+body.win-small .neon-frame::before{ animation-duration: 1.25s; }
+body.win-big   .neon-frame::before{ animation-duration: 0.9s; }
+body.win-mega .neon-frame::before{
+  animation:
+    winFlash 0.35s ease-out 1,
+    neonWinPulse .6s ease-in-out infinite .35s,
+    winHueCycleFast .45s linear infinite .35s;
+}
+
+/* One-shot white ignition flash */
+@keyframes winFlash {
+  0%{
+    opacity: 0;
+    filter: brightness(1) saturate(1);
+    box-shadow: none;
+  }
+  40%{
+    opacity: 1;
+    filter: brightness(3.2) saturate(0);
+    box-shadow:
+      0 0 40px rgba(255,255,255,1),
+      0 0 90px rgba(255,255,255,.9),
+      0 0 160px rgba(255,255,255,.6);
+  }
+  100%{
+    opacity: 1;
+    filter: brightness(1.2) saturate(1.2);
+    box-shadow:
+      0 0 14px rgba(0,245,255,.55),
+      0 0 30px rgba(255,43,214,.45),
+      0 0 60px rgba(255,255,255,.18);
+  }
+}
+
 
 
   </style>
@@ -1108,6 +1096,9 @@ function setPhase(p){
   }
 
 function draw(){
+
+console.log("DRAW CALLED", { phase, held: [...held] });
+
   // Replace DISCARDED cards (your current UX: flipped/selected cards are discards)
   for (let i = 0; i < 5; i++){
     if (held[i]) {
@@ -1129,11 +1120,23 @@ function draw(){
   // Render the final hand with win highlights applied
   renderHand();
 
-  // Pay winnings
+  // Pay winnings (SAFE: clamps bet index to 0..4)
   let win = 0;
-  if (res.key !== "no_win"){
-    win = PAYMAP[res.key].coins[bet - 1];
+
+  if (res.key !== "no_win") {
+    const pay = PAYMAP[res.key];
+
+    // coerce bet to a number and clamp to [1..5]
+    const b = Number(bet);
+    const betClamped = Number.isFinite(b) ? Math.min(5, Math.max(1, b)) : 1;
+    const idx = betClamped - 1;
+
+    win = (pay && Array.isArray(pay.coins)) ? (pay.coins[idx] ?? 0) : 0;
+
+    // (optional) keep bet sane in state
+    bet = betClamped;
   }
+
   bank += win;
   renderTop();
 
@@ -1148,7 +1151,10 @@ function draw(){
   // Pulse the neon frame ONLY on wins
   document.body.classList.remove("win-active","win-small","win-big","win-mega");
 
-  if (win > 0) {
+  console.log("WIN DEBUG:", { win, winTier, resKey: res.key });
+
+
+  if (res.key !== "no_win") {
     const safeTier = (winTier && winTier !== "none") ? winTier : "small";
     document.body.classList.add("win-active", `win-${safeTier}`);
 
