--- a/Page2/neonpoker/chatDrawPoker.html
+++ b/Page2/neonpoker/chatDrawPoker.html
@@ -161,6 +161,58 @@
       box-shadow: 0 18px 60px rgba(0,0,0,.28);
     }
 
+    /* Make panel able to host a bezel */
+    .panel{ position: relative; overflow: visible; }
+
+    /* PANEL NEON PIPING (idle = dark, win = neon) */
+    .panel::before{
+      content:"";
+      position:absolute;
+      inset: -14px; /* spacing outside the panel ADJUST TO TASTE*/
+      border-radius: calc(var(--radius) + 14px);
+      pointer-events:none;
+
+      border: 3px solid transparent;
+
+      /* idle: dark single-color ring */
+      border-image: linear-gradient(
+        180deg,
+        rgba(18,28,38,.95),
+        rgba(8,14,20,.95)
+      ) 1;
+
+      opacity: .18;
+      filter: none;
+      box-shadow: none;
+      animation: none;
+    }
+
+        /* WIN: panel bezel ignites too (slightly toned down) */
+    body.win-active .panel::before{
+      border-image: conic-gradient(
+        from 0deg,
+        #00f5ff,
+        #ff2bd6,
+        #ffd700,
+        #00ffa0,
+        #00f5ff
+      ) 1;
+
+      opacity: .95;
+
+      /* Same stack: white flash -> pulse -> fast hue cycle */
+      animation:
+        winFlash 0.45s ease-out 1,
+        neonWinPulse 0.95s ease-in-out infinite 0.45s,
+        winHueCycleFast 0.1s linear infinite 0.45s;  /*default it 1.1s*/
+      /* Slightly less bloom than the cabinet frame */
+      box-shadow:
+        0 0 14px rgba(0,245,255,.35),
+        0 0 28px rgba(255,43,214,.28),
+        0 0 54px rgba(255,255,255,.16);
+    }
+
+
 
     /* Subtle ambient neon shimmer on the hand area (neon theme only) */
     @keyframes ambientGlow {
@@ -256,6 +308,44 @@
       min-height: 180px;
       align-items: center;
     }
+
+    /* -- for the piping */
+    .hand{
+      position: relative;
+      overflow: visible;
+    }
+
+
+        /* ===== CARD AREA NEON PIPING ===== */
+    .hand::before{
+      content:"";
+      position:absolute;
+      inset: -10px;
+      border-radius: 20px;
+
+      border: 2px solid rgba(20,40,55,.9);
+      box-shadow: 0 0 6px rgba(0,0,0,.45);
+
+      pointer-events:none;
+    }
+
+    /* powered-on look when cards are dealt */
+    body.phase-dealt .hand::before{
+      border-color: rgba(0,245,255,.45);
+      box-shadow:
+        0 0 10px rgba(0,245,255,.25),
+        0 0 18px rgba(255,43,214,.18);
+    }
+
+    /* subtle echo during wins */
+    body.win-active .hand::before{
+      border-color: rgba(255,255,255,.9);
+      box-shadow:
+        0 0 14px rgba(0,245,255,.45),
+        0 0 28px rgba(255,43,214,.35);
+    }
+
+
     body[data-theme="neon"] .hand{
       animation: ambientGlow 3.8s ease-in-out infinite;
     }
@@ -650,20 +740,26 @@ body.win-active .neon-frame::before{
 
   opacity: 1;
 
-  animation:
-    /* 1️⃣ one-shot flash */
+  /*animation:
+    /* 1️⃣ one-shot flash
     winFlash 0.45s ease-out 1,
 
-    /* 2️⃣ brightness pulse (starts AFTER flash) */
+    /* 2️⃣ brightness pulse (starts AFTER flash)
     neonWinPulse .85s ease-in-out infinite .45s,
 
-    /* 3️⃣ fast color cycling (starts AFTER flash) */
+    /* 3️⃣ fast color cycling (starts AFTER flash)
     winHueCycleFast 1.1s linear infinite .45s;
+    */
+      animation:
+    winFlash 0.4s ease-out 1,
+    neonWinPulse 0.9s ease-in-out infinite 0.4s,
+    winHueCycleFast 0.8s linear infinite 0.9s;
+
 }
 
 
 /* Tier speeds */
-body.win-small .neon-frame::before{ animation-duration: 1.25s; }
+body.win-small .neon-frame::before{ animation-duration: 0.25s;/*1.25s  default*/ }
 body.win-big   .neon-frame::before{ animation-duration: 0.9s; }
 body.win-mega .neon-frame::before{
   animation:
