adding a texas holdem button to page 2

--- a/Page2/page2.html
+++ b/Page2/page2.html
@@ -7,6 +7,30 @@
 	<title>Game Room</title>
 </head>
 
+
+<style>
+.holdem-link {
+  display: inline-block;
+  width: 100px;
+  height: 50px;
+
+  background-image: url("texas-holdem.png");
+  background-size: contain;     /* keeps aspect ratio */
+  background-repeat: no-repeat;
+  background-position: center;
+
+  text-decoration: none;
+}
+
+.holdem-link:hover {
+  filter: brightness(1.15);
+}
+
+
+</style>
+
+
+
 <body>
 	<h1><a href = "/JohnBWebsite/johnspage.html" title = "home" >HOME</a></H1>
 	<h2>page 2 </h2>
@@ -16,7 +40,8 @@
 <td><a href = "neonpoker/chatDrawPoker.html">NEON POKER</a></td>
 <td><a href = "drawpoker/draw_poker.html">Draw Poker</a></td>
 <td><a href = "blackjack/blackjack.html">Blackjack</a></td>
-<td><a href = "texasholdem/texasholdem.html">Texas HoldEm</a></td>
+<td><a href="texasholdem/texasholdem.html" class="holdem-link"></a>
+Texas HoldEm</a></td>
 <td><a href = "kingscorners/kinggcorners.html">Kings Corners</a></td>
 </tr>
 </table>
